--- a/templates/user/connexion.html.twig
+++ b/templates/user/connexion.html.twig
@@ -1,19 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello VisiteursController!{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div class="mt-5">
+    <h1 class="text-center">Connexion</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    {# {% if error %}
+        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %} #}
 
-    This friendly message is coming from:
-    <ul>
-        
-    </ul>
+    <form method="post" class="mt-4">
+        <div class="form-group">
+            <label for="username">Email</label>
+            <input type="text" name="_username" id="username" class="form-control" required autofocus>
+        </div>
+        <div class="form-group">
+            <label for="password">Mot de passe</label>
+            <input type="password" name="_password" id="password" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-primary mt-3">Connexion</button>
+    </form>
 </div>
 {% endblock %}
