--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,8 +58,7 @@
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                {# <a class="nav-link" href="{{ path('app_login') }}">Connexion</a> #}
-                                <a class="nav-link" href="#">Connexion</a>
+                                <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
                             </li>
                             <li class="nav-item">
                                  <a class="nav-link" href="{{ path('inscription') }}">Inscription</a>
