--- a/templates/user/inscription.html.twig
+++ b/templates/user/inscription.html.twig
@@ -1,25 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %} {{ title }} {% endblock %}
 
 {% block body %}
-<div class="mt-5">
-    <h1 class="text-center">Inscription</h1>
+    <h1>Inscription</h1>
 
-    {# {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %} #}
-
-    <form method="post" class="mt-4">
-        <div class="form-group">
-            <label for="username">Email</label>
-            <input type="text" name="_username" id="username" class="form-control" required autofocus>
-        </div>
-        <div class="form-group">
-            <label for="password">Mot de passe</label>
-            <input type="password" name="_password" id="password" class="form-control" required>
-        </div>
-        <button type="submit" class="btn btn-primary mt-3">Connexion</button>
-    </form>
-</div>
+    {{ form_start(inscriptionForm) }}
+        {{ form_widget(inscriptionForm) }}
+        <button type="submit" class="btn btn-primary">S'inscrire</button>
+    {{ form_end(inscriptionForm) }}
 {% endblock %}
