--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,14 +52,14 @@
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="">Mon Profil</a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <!-- <li><a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a></li> -->
-                                    <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                                    <li><a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a></li>
+                                    {# <li><a class="dropdown-item" href="#">Déconnexion</a></li> #}
                                 </ul>
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                {# <a class="nav-link" href="{{ path('app_login') }}">Connexion</a> #}
-                                <a class="nav-link" href="#">Connexion</a>
+                                <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+                                {# <a class="nav-link" href="#">Connexion</a> #}
                             </li>
                             <li class="nav-item">
                                  <a class="nav-link" href="{{ path('inscription') }}">Inscription</a>
