--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,8 +52,7 @@
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="">Mon Profil</a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <!-- <li><a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a></li> -->
-                                    <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                                    <li><a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a></li>
                                 </ul>
                             </li>
                         {% else %}
