--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,13 @@
         
     </head>
     <body>
+
+
+
+{# if (!isset($_SESSION['user'])) {
+    header('location:/login/login_form.php');
+} #}
+
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
