--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -4,36 +4,28 @@
 
 {% block body %}
     <h1>Articles index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Description</th>
-                <th>Url_image</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for article in articles %}
-            <tr>
-                <td>{{ article.id }}</td>
-                <td>{{ article.nom }}</td>
-                <td>{{ article.description }}</td>
-                <td>{{ article.urlImage }}</td>
-                <td>
-                    <a href="{{ path('app_articles_show', {'id': article.id}) }}">show</a>
-                    <a href="{{ path('app_articles_edit', {'id': article.id}) }}">edit</a>
-                </td>
-            </tr>
+<body>
+    {% for article in articles %}
+            <div class="card" style="width: 18rem;">
+                <img src="{{ article.urlImage }}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{{ article.nom }}</h5>
+                    <p class="card-text">{{ article.description }}</p>
+                    <a href="{{ path('app_articles_show', {'id': article.id}) }}" class="btn btn-primary">Montrer l'article</a>
+                    <a href="#" class="btn btn-primary mt-2">Ajouter au panier</a>
+                </div>
+            </div>
         {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">no records found</h5>
+                    <p class="card-text">no records found</p>
+                    {# <a href="#" class="btn btn-primary">Go somewhere</a> #}
+                </div>
+            </div>
+    {% endfor %}        
+</body>
+    
     <a href="{{ path('app_articles_new') }}">Create new</a>
 {% endblock %}
