--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -25,10 +25,13 @@
             </tr>
         </tbody>
     </table>
-
     <a href="{{ path('app_articles_index') }}">back to list</a>
 
+{% if commercant == article.getIdCommercants() %}
+    
     <a href="{{ path('app_articles_edit', {'id': article.id}) }}">edit</a>
 
     {{ include('articles/_delete_form.html.twig') }}
+{% endif %}
+
 {% endblock %}
