Correction des relations (clés étrangères)

--- a/templates/articles/index_commercant.html.twig
+++ b/templates/articles/index_commercant.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Articles index{% endblock %}
 
 {% block body %}
-    <h1>Articles index</h1>
+    <h1>Les articles de la boutique</h1>
     <div class="cards d-flex justify-content-start">
     {% for article in articles %}
             <div class="card m-2" style="width: 18rem;">
