--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,24 +31,15 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_paniers_articles_index') }}">Mon panier</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        {% if (is_granted("ROLE_COMMERCANT")) %}
+                            <a class="nav-link" href="{{ path('app_commercants_index') }}">Espace commerçant</a>
+                        {% else %}
+                            <a class="nav-link" href="{{ path('app_commercants_new') }}">Devenir commerçant</a>
+                        {% endif %}
                         </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        {# <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown link
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                        </li> #}
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         {% if app.user %}
@@ -60,13 +51,11 @@
                                     <li><a class="dropdown-item" href="">Mon Profil</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a></li>
-                                    {# <li><a class="dropdown-item" href="#">Déconnexion</a></li> #}
                                 </ul>
                             </li>
                         {% else %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
-                                {# <a class="nav-link" href="#">Connexion</a> #}
                             </li>
                             <li class="nav-item">
                                  <a class="nav-link" href="{{ path('inscription') }}">Inscription</a>
