--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -11,7 +11,7 @@
                     <h5 class="card-title">{{ article.nom }}</h5>
                     <p class="card-text">{{ article.description }}</p>
                     <a href="{{ path('app_articles_show', {'id': article.id}) }}" class="btn btn-primary">Montrer l'article</a>
-                    <a href="#" class="btn btn-primary mt-2">Ajouter au panier</a>
+                    <a href="{{ path('app_paniers_articles_new', {'id_article': article.id}) }}" class="btn btn-primary mt-2">Ajouter au panier</a>
                 </div>
             </div>
         {% else %}
