--- a/templates/paniers_articles/index.html.twig
+++ b/templates/paniers_articles/index.html.twig
@@ -33,5 +33,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_paniers_articles_new') }}">Create new</a>
+    <a href="{{ path('app_commandes_new') }}">Payer</a>
 {% endblock %}
