--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Articles index{% endblock %}
 
 {% block body %}
+    <h1>Homepage</h1>
     <div class="cards d-flex justify-content-start">
     {% for article in articles %}
             <div class="card m-2" style="width: 18rem;">
